--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
+    "cors-anywhere": "^0.4.4",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1"
   }
