--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
+  "devDependencies": {
+    "@types/node": "^20.10.0"
+  },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cookie-parser": "^1.4.6",
-    "cors-anywhere": "^0.4.4",
-    "express": "^4.18.2",
     "http-proxy": "^1.18.1"
   }
 }
